<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/bloodInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#D50000"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="sans-serif-medium"
        android:foregroundTint="#D50000"
        android:hint="@string/mmHG"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pulsInput" />

    <EditText
        android:id="@+id/bmiInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#D50000"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="sans-serif-medium"
        android:foregroundTint="#D50000"
        android:hint="@string/bmi"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toEndOf="@+id/bmi"
        app:layout_constraintTop_toBottomOf="@+id/bloodInput" />

    <EditText
        android:id="@+id/pulsInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#D50000"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="sans-serif-medium"
        android:foregroundTint="#D50000"
        android:hint="@string/puls"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tempInput"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/tempInput"
        android:layout_width="168dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#D50000"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="sans-serif-medium"
        android:foregroundTint="#D50000"
        android:hint="@string/gradeCelsius"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genInput" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#D50000"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="sans-serif-medium"
        android:foregroundTint="#D50000"
        android:hint="@string/metri"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kgInput" />

    <Button
        android:id="@+id/updateData"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="#FE3535"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-light"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="@string/Update"
        android:textAlignment="center"
        android:textColorLink="#FF9393"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiInput"
        app:toggleCheckedStateOnClick="true"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/saveData"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="#FE3535"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-light"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="@string/Save"
        android:textAlignment="center"
        android:textColorLink="#FF9393"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateData"
        app:toggleCheckedStateOnClick="true"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="68dp"
        android:layout_height="37dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/blood"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/blood_pressure"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bloodInput"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puls"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/puls"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/puls"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/pulsInput"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatura"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/temperatura"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/temperatura"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tempInput"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gen"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/gen"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/gen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/genInput"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/height"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/n_l_ime"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/heightInput"
        app:layout_constraintTop_toBottomOf="@+id/greutate"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/greutate"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/greutate"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/kgInput"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nume"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/nume"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="56dp"
        android:capitalize="none"
        android:fontFamily="sans-serif-condensed-light"
        android:includeFontPadding="false"
        android:text="@string/nume"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/numeInput"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/numeInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="144dp"
        android:autoText="false"
        android:backgroundTint="#D50000"
        android:backgroundTintMode="src_atop"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/nume"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kgInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#D50000"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="sans-serif-medium"
        android:foregroundTint="#D50000"
        android:hint="@string/kg"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeInput" />

    <Spinner
        android:id="@+id/genInput"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="132dp"
        android:backgroundTint="#D50000"
        android:backgroundTintMode="add"
        android:clickable="false"
        android:contentDescription="@string/gen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightInput" />

</androidx.constraintlayout.widget.ConstraintLayout>