<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#00FFFFFF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/changePass"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/old_pass"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:backgroundTint="#FFCECE"
        android:ellipsize="middle"
        android:hint="@string/oldPass"
        android:password="true"
        android:textAlignment="center"
        android:textColorHint="#795548"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@color/white"
        android:backgroundTint="#FFCECE"
        android:ems="10"
        android:foregroundTint="@color/white"
        android:hint="@string/newPass"
        android:inputType="textPassword"
        android:password="true"
        android:textAlignment="center"
        android:textColorHint="#795548"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_pass" />

    <EditText
        android:id="@+id/new_pass_again"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:backgroundTint="#FFCECE"
        android:ems="10"
        android:hint="@string/again_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:password="true"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_pass" />

    <Button
        android:id="@+id/change_pass_button"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#EC3535"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/changePass"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_pass_again"
        app:layout_constraintVertical_bias="0.086" />


</androidx.constraintlayout.widget.ConstraintLayout>