<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ScanActivity">

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/red"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-light"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="@string/select_image"
        android:textAlignment="center"
        android:textColorLink="#FF9393"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toggleCheckedStateOnClick="true"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="640dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/red"
        android:clickable="false"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-light"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="@string/convert"
        android:textAlignment="center"
        android:textColorLink="#FF9393"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:toggleCheckedStateOnClick="true"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_convert"
        android:layout_below="@+id/btn_select"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>